# project5

./: .env  README.md  pyproject.toml
data/: OperationsTest.xlsx
src/: config.py  date.py  generators.py  main.py  masks.py  processing.py  read_csv.py  read_excel.py  reports.py  services.py  sort_by_month.py  user_settings.json  utils.py  views.py  widget.py
tests/: test_generator.py  test_masks.py  test_processing.py  test_services.py  test_utils.py  test_views.py  test_widget.py
